Sat Aug 19 11:59:04 2006  Jiri (George) Lebl <jirka@5z.com>

	* src/lexer.l: fix flex braindamage with respect to yywrap function

Tue Aug 15 11:05:54 2006  Jiri (George) Lebl <jirka@5z.com>

	* Release 0.7.6.1

Tue Aug 15 10:29:40 2006  Jiri (George) Lebl <jirka@5z.com>

	* src/mpwrap.c: catch all cases of complex result from power function
	  and fix unstable (possibly hung) newton's alg implementation of
	  rational exponentiation and replace with converting to float and
	  using mpfr_pow.

	* src/geniustests.txt: add tests

Sun Aug 13 14:15:42 2006  Jiri (George) Lebl <jirka@5z.com>

	* Release 0.7.6

Sat Aug 12 20:31:24 2006  Jiri (George) Lebl <jirka@5z.com>

	* src/funclib.c, src/mpwrap.h: add RiemannZeta and GammaFunction
	  (at least for real values)

	* lib/linear_algebra/special_matrices.gel,
	  lib/linear_algebra/misc.gel: Add MakeVector (like octave vec)
	  CommutationMatrix (octave commutation_matrix) and
	  ToeplitzMatrix (octave toeplitz)

	* help/C/gel-function-list.xml: add docs for the above

	* configure.in: raise version

	* src/geniustests.txt: add tests for new functions

Wed Aug 09 12:40:28 2006  Jiri (George) Lebl <jirka@5z.com>

	* help/C/genius.xml, help/C/gel-plotting.xml: add a plotting
	  chapter.

	* help/C/figures/*.png: New plotting figures plus update the old
	  main window figure

Wed Aug 09 11:07:12 2006  Jiri (George) Lebl <jirka@5z.com>

	* lib/equation_solving/formulas.gel:  Add QuadraticFormula,
	  CubicFormula and PolynomialRoots functions

	* help/C/gel-function-list.xml: Add docs.

Tue Aug 08 11:00:19 2006  Jiri (George) Lebl <jirka@5z.com>

	* src/calc.c, src/eval.c, src/funclib.c, src/matop.c:  Fix many
	  complex number comparisons to fix computation of complex matrix
	  determinants and other instances where gaussian elimination was
	  used.  Also for the polynomial functions and handling of booleans
	  and a few more.

	* src/genius.c: Add --exec option, follow gnu semantics for
	  the long options with arguments
