@@ -1,3 +1,8 @@
+Wed Aug 23 11:33:49 2006  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/gnome-genius.c: add Kai as documentor int he about box and add
+	  the diactrical marks in Jiri in the about box
+
 Sat Aug 19 11:59:04 2006  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/lexer.l: fix flex braindamage with respect to yywrap function
